# content-publisher

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.infra.yml  compose.yml
crates/core-service/: .env.example  Cargo.toml  README.md
crates/core-service/migrations/: 0001_create_publication_targets.sql  0002_create_articles.sql  0003_create_article_video_links.sql  0004_create_publication_tasks.sql  0005_create_publication_logs.sql
crates/core-service/src/: config.rs  lib.rs  main.rs  state.rs
crates/core-service/src/application/: article_service.rs  calendar_service.rs  mod.rs  publication_orchestrator.rs  scheduling_service.rs  target_service.rs
crates/core-service/src/application/ports/: article_repository.rs  log_repository.rs  media_client.rs  mod.rs  publication_gateway.rs  target_repository.rs  task_repository.rs
crates/core-service/src/domain/: article.rs  error.rs  log.rs  mod.rs  target.rs  task.rs
crates/core-service/src/infrastructure/: mod.rs
crates/core-service/src/infrastructure/db/: mod.rs  pg_article_repository.rs  pg_log_repository.rs  pg_target_repository.rs  pg_task_repository.rs
crates/core-service/src/infrastructure/gateway/: http_publication_gateway.rs  mod.rs
crates/core-service/src/infrastructure/media_client/: http_media_client.rs  mod.rs
crates/core-service/src/infrastructure/scheduler/: mod.rs  publish_job.rs
crates/core-service/src/presentation/: dto.rs  error_response.rs  mod.rs
crates/core-service/src/presentation/api/: articles.rs  calendar.rs  media.rs  mod.rs  openapi.rs  targets.rs  tasks.rs
crates/core-service/static/css/: calendar.css
crates/core-service/static/js/: calendar.js
crates/core-service/templates/: article_form.html  article_view.html  calendar_list.html  calendar_month.html  calendar_week.html  layout.html  target_form.html  target_list.html
crates/telegram-publisher/: .env.example  Cargo.toml  README.md
crates/telegram-publisher/src/: config.rs  handlers.rs  main.rs  telegram.rs
(+10 files in other folders)
