[package]
name = "core-service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-contracts = { path = "../shared-contracts" }

axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

thiserror = "2.0.18"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tower = "0.5"
tower-http = { version = "0.7.0", features = ["fs", "trace", "cors"] }

askama = "0.16.0"

dotenvy = "0.15"

utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

reqwest = { version = "0.13.4", features = ["json"] }
async-trait = "0.1"
